# devrel-agents-tutorial

./: .ai_config_defaults.json  .env  .env.example  .gitignore  CLAUDE.md  COST_METRICS_FIX.md  COST_TRACKING_SUMMARY.md  MCP_INSTALLATION.md  MCP_SETUP.md  README.md  REDIS_SETUP.md  analyze_missing_costs.py  capture_cost_logs.py  check_missing_costs.py  config_manager.py  debug_bm25.py  debug_feedback.py  debug_feedback_direct.py  demo_pii_protection.py  initialize_embeddings.py  list_environments.py  main.py  package-lock.json  project_overview.md  pyproject.toml  requirements.txt  run_ai_config_tests.sh  run_experiment.sh  run_experiment_concurrent.sh  run_test.sh  show_cost_issues.py  test-report.json  test_direct_evaluator.py  test_direct_tracking.py  test_evaluator.py  test_fixed_config_manager.py  test_reranking.py  test_rl_query.py  test_semantic_scholar_timeout.py  test_tool_details.py  (+10 more)
.claude/: settings.local.json
.github/workflows/: ai-config-validation.yml
agents/: generic_agent.py  ld_agent_helpers.py  model_driven_agent.py  security_agent.py  supervisor_agent.py  support_agent.py  support_agent_complex_backup.py  support_agent_complex_broken_backup.py  support_agent_simple_new.py  workflow_engine.py
ai_metrics/: __init__.py  metrics_tracker.py  tool_performance.py
api/: main.py  models.py  segmentation_test.py
api/services/: agent_service.py  agent_service_updated.py
api/utils/: console_capture.py
bootstrap/: README.md  ai_config_manifest.yaml  ai_config_manifest_TEMP.yaml  create_configs.py  create_configs_TEMP.py  requirements.txt  tutorial_3_experiment_variations.py  tutorial_3_experiment_variations_TEMP.py
configs/: production_defaults.py  security-agent.json  supervisor-agent.json  support-agent.json
data/: enterprise_kb.py  fake_users.json  mythical_pets_kb.py  pdf_processor.py  sample_queries.json  vector_store.py
data/vector_store/: documents.pkl  faiss.index
datasets/: answer-tests.csv  routing-tests.csv
dev_posts/: cross_posting_instructions.md  langgraph_pt1.md
docs/: AI_METRICS_GUIDE.md  MCP_RESEARCH_GUIDE.md  MCP_SETUP.md  README.md  SYSTEM_STATUS.md  TOOL_TEST_QUERIES.md  TRAFFIC_SIMULATION_GUIDE.md
evaluators/: README.md  local_evaluator.py
kb/: account-management.md  feature-guide.md  refund-policy.md  shipping-info.md  troubleshooting.md
policy/: __init__.py  config_manager.py  config_manager_updated.py
test_data/: ai_config_evaluation.yaml
tests/: test_config_manager.py  test_direct_tracking.py  test_ui_sample_prompts.py  test_vector_search.py
tools/: __init__.py  build_rag_dataset.py  concurrent_traffic_generator.py  summarize_test_failures.py  test_rag.py  traffic_generator.py
tools_impl/: __init__.py  dynamic_tool_factory.py  mcp_research_tools.py  mcp_runtime.py  pii_detection.py  redaction.py  reranking.py  search.py  search_v1.py  search_v2.py
ui/: chat_interface.py
utils/: bedrock_helpers.py  conversation_memory.py  cost_calculator.py  logger.py  metrics.py  pii_sanitizer.py  redis_cache.py
