[project]
name = "agents-demo"
version = "0.1.0"
description = "LaunchDarkly AI Configs tutorial with LangGraph agents"
requires-python = ">=3.11"
dependencies = [
    # Agent Framework
    "langchain>=0.1.0",
    "langgraph>=0.0.40",
    "langchain-anthropic>=0.1.0",
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    # LaunchDarkly (using currently available versions; update to >=10.0.0 / >=1.0.0 at GA)
    "launchdarkly-server-sdk>=9.0.0",
    "launchdarkly-server-sdk-ai>=0.10.0",
    # AWS Bedrock Integration
    "langchain-aws>=0.2.0",
    "boto3>=1.35.0",
    # Vector Search
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "faiss-cpu>=1.7.0",
    # PDF Processing
    "PyMuPDF>=1.23.0",
    "tiktoken>=0.5.0",
    # UI Framework
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    # Development
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "langchain-openai>=0.3.31",
    "beautifulsoup4>=4.13.5",
    "rank-bm25>=0.2.2",
    "langchain-mistralai>=0.2.12",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.14.1",
]

# Note: ld-aic-cicd is installed separately in CI via GitHub
# See .github/workflows/ai-config-validation.yml for installation

[tool.setuptools]
packages = ["api", "agents"]

[tool.uv.sources]
launchdarkly-server-sdk-ai = { git = "https://github.com/launchdarkly/python-server-sdk-ai", subdirectory = "packages/sdk/server-ai", rev = "main" }
